--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ahorcado - Inicio";
 }
 
 <div>
-    <h1>Index</h1>
-    <p>Bienvenidos al sitio web de NombreProyecto</p>
+    <h1>Ahorcado</h1>
+    <p>Atrevete a jugar</p>
+    <a href='@Url.Action("PartidaActual")'>Nueva Partida</a>
 </div>
