--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -6,7 +6,14 @@
 @{foreach (char letra in ViewBag.palabraActual){
     <h2>@letra</h2>
 }}
+@ViewBag.intentosRestante
+<form action='@Url.Action("arriesgarLetra")' method="post"> 
+ <input type="Text" name="letraNueva" placeholder="Ingresa una letra" required>
+ <input type="Submit" value="Enviar">
+</form>
 
+
+    
 
 <div>
 
