Adicion del moodo de dos jugadores

--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -20,7 +20,7 @@
     }}<h3>@lista</h3>
 
 <form action='@Url.Action("arriesgarLetra")' method="get"> 
- <input type="Text" name="letraNueva" placeholder="Ingresa una letra" required>
+ <input type="text" name="letraNueva" placeholder="Ingresa una letra" required maxlength="1">
  <input type="Submit" value="Enviar">
 </form>
 
