--- a/Views/Home/resultado.cshtml
+++ b/Views/Home/resultado.cshtml
@@ -3,7 +3,7 @@
 }
 <div>
 
-    <h1>Juego finalizado: @ViewBag.resultado</h1>
+    <h1>Juego finalizado: @ViewBag.resultadoPartida</h1>
     <h2>La palabra era: @ViewBag.palabra</h2>
     <h2>Usaste @ViewBag.intentos intentos</h2>
 
