--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div>
     <h1>Ahorcado</h1>
     <p>Atrevete a jugar</p>
-    <a href='@Url.Action("PartidaActual")'>Nueva Partida</a>
+    <a href='@Url.Action("PartidaActual")'>Nueva Partida automatica</a>
+    <a href='@Url.Action("ModoDos")'>Nueva Partida versión 2 jugadores</a>
 </div>
