--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
 
 <body>
     <header>
-        NombreProyecto
+        <h3>Hangman</h3>
+        <a href='@Url.Action("Index")'>logo</a>
     </header>
 
     <main role="main">
