--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -1,8 +1,12 @@
+<head>
 @{
     ViewData["Title"] = "Ahorcado - Juego";
 }
-<div>
-<h1>Palabra:</h1>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+<div class= "pizarron">
+<h2>Palabra:</h2>
 @{
     string palabra="";
     foreach (char letra in ViewBag.palabraActual){
@@ -16,9 +20,12 @@
   @{
     string lista="";
     foreach (char letra in ViewBag.letrasFallidas){
-    lista = lista + @letra + "-";
-    }}<h3>@lista</h3>
-
+    lista = lista + @letra + " -";
+    }}
+    
+<h3>@lista</h3>
+</div>
+<div>
 <form action='@Url.Action("arriesgarLetra")' method="get"> 
  <input type="text" name="letraNueva" placeholder="Ingresa una letra" required maxlength="1">
  <input type="Submit" value="Enviar">
@@ -28,8 +35,9 @@
  <input type="Text" name="palabra" placeholder="Ingresa la palabra" required>
  <input type="Submit" value="Enviar">
 </form>
+</div>
     
 
-<div>
+<body>
 
 
