--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1,9 +1,61 @@
-div{
-    clear:both;
+* {
+  margin: 0%;
+  padding: 0%;
+  border: 1px solid gray;
 }
-div h2{
-    clear:both;
+a {
+  text-decoration: none;
 }
-div h3{
-    float:left;
+a p {
+  font-style: none;
+}
+h1 {
+  font-size: 72px;
+}
+nav {
+}
+nav a {
+  padding: 0.5%;
+}
+body div h2 {
+  color: white;
+  margin-left: 12%;
+  border: none;
+}
+body div h3 {
+  color: white;
+  margin-left: 12%;
+  border: none;
+}
+body div {
+  margin-left: 10%;
+  border: none;
+  margin-bottom:2%;
+
+}
+body form{
+    border: none;
+
+}
+body form input[type="text"] {
+  margin-bottom: 0.5%;
+width: 20%;
+  padding: 0.5%;
+  border-radius: 5px;
+}
+body form input[type="submit"] {
+    margin-left: 2%;
+    width: 5%;
+    padding: 0.5%;
+    border-radius: 5px;
+  }
+
+body .pizarron {
+  padding-top: 15%;
+  padding-bottom: 15%;
+  margin-left: 0%;
+  background-position: 10%;
+  background-image: url("/img/fondo.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
