Arreglo de errores, agregado de seleccion de palabras

--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -8,9 +8,8 @@
 <div class= "pizarron">
 <h2>Palabra:</h2>
 @{
-    string palabra="";
-    foreach (char letra in ViewBag.palabraActual){
-    palabra = palabra + @letra + " ";
+   
+    string palabra=string.Join(" ", ViewBag.palabraActual);
     
 }}<h3>@palabra</h3>
 
@@ -18,12 +17,10 @@
 <h2>Intentos restantes: @ViewBag.intentosRestante </h2>
 <h2>Letras incorrectas: </h2> 
   @{
-    string lista="";
-    foreach (char letra in ViewBag.letrasFallidas){
-    lista = lista + @letra + " -";
+    string letrasInc=string.Join(" - ", ViewBag.letrasFallidas);
     }}
     
-<h3>@lista</h3>
+<h3>@letrasInc</h3>
 </div>
 <div>
 <form action='@Url.Action("arriesgarLetra")' method="get"> 
@@ -38,6 +35,6 @@
 </div>
     
 
-<body>
+</body>
 
 
