--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -22,6 +22,9 @@ body div h2 {
   margin-left: 12%;
   border: none;
 }
+body div .Resultado{
+  color:black;
+}
 body div h3 {
   color: white;
   margin-left: 12%;
