--- a/Views/Home/resultado.cshtml
+++ b/Views/Home/resultado.cshtml
@@ -4,8 +4,7 @@
 }
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<div class="Resultado">
-  
+<div class="resultado">
     <h1>Juego finalizado: @ViewBag.resultadoPartida</h1>
     <h2>La palabra era: @ViewBag.palabra</h2>
     <h2>Usaste @ViewBag.intentos</h2>
