--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -1,40 +1,38 @@
 <head>
-@{
+  @{
     ViewData["Title"] = "Ahorcado - Juego";
-}
+  }
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-<div class= "pizarron">
-<h2>Palabra:</h2>
-@{
-   
-    string palabra=string.Join(" ", ViewBag.palabraActual);
-    
-}}<h3>@palabra</h3>
+  <section class="pizarron">
+    <div><h2>Palabra:</h2>
+    @{
+
+      string palabra = string.Join(" ", ViewBag.palabraActual);
+
+    }
+    <h3>@palabra</h3>
 
 
-<h2>Intentos restantes: @ViewBag.intentosRestante </h2>
-<h2>Letras incorrectas: </h2> 
-  @{
-    string letrasInc=string.Join(" - ", ViewBag.letrasFallidas);
-    }}
-    
-<h3>@letrasInc</h3>
-</div>
-<div>
-<form action='@Url.Action("arriesgarLetra")' method="get"> 
- <input type="text" name="letraNueva" placeholder="Ingresa una letra" required maxlength="1">
- <input type="Submit" value="Enviar">
-</form>
+    <h2>Intentos restantes: @ViewBag.intentosRestante </h2>
+    <h2>Letras incorrectas: </h2>
+    @{
+      string letrasInc = string.Join(" - ", ViewBag.letrasFallidas);
+    }
+    <h3>@letrasInc</h3>
+    </div>
+  </section>
+  <div>
+    <form action='@Url.Action("arriesgarLetra")' method="get">
+      <input type="text" name="letraNueva" placeholder="Ingresa una letra" required maxlength="1">
+      <input type="Submit" value="Enviar">
+    </form>
 
-<form action='@Url.Action("arriesgarPalabra")' method="get"> 
- <input type="Text" name="palabra" placeholder="Ingresa la palabra" required>
- <input type="Submit" value="Enviar">
-</form>
-</div>
-    
-
+    <form action='@Url.Action("arriesgarPalabra")' method="get">
+      <input type="Text" name="palabra" placeholder="Ingresa la palabra" required>
+      <input type="Submit" value="Enviar">
+    </form>
+  </div>
 </body>
-
-
