--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,8 +10,7 @@
 
 <body>
     <header>
-        <h3>Hangman</h3>
-        <a href='@Url.Action("Index")'>logo</a>
+        <a href='@Url.Action("Index")'><img src="~/img/logo.png" alt="Logo"></a>
     </header>
 
     <main role="main">
