--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -3,62 +3,120 @@
   padding: 0%;
   border: 1px solid gray;
 }
-a {
-  text-decoration: none;
+
+body {
+  background-color: #DCE1DE;
 }
-a p {
-  font-style: none;
-}
+
 h1 {
   font-size: 72px;
-}
-nav {
-}
-nav a {
-  padding: 0.5%;
-}
-body div h2 {
-  color: white;
-  margin-left: 12%;
+  text-align: center;
   border: none;
+  color: #1F2421;
+  margin-top: 5%;
 }
-body div .Resultado{
-  color:black;
-}
-body div h3 {
-  color: white;
-  margin-left: 12%;
+
+.inicio {
+  margin: 2.5%;
+  width: 60%;
+  margin-left: 20%;
   border: none;
-}
-body div {
-  margin-left: 10%;
-  border: none;
-  margin-bottom:2%;
 
 }
-body form{
+
+.inicio h3 {
+  text-align: center;
+  padding: 1.5%;
+  border: none;
+  font-size: 20px;
+}
+
+body h2 {
+  text-align: center;
+  border: none;
+}
+
+.inicio nav {
+  display: flex;
+  gap: 2%;
+  width: 40%;
+  padding: 1%;
+  margin-left: 28.5%;
+  border: none;
+}
+
+.inicio nav a {
+  background-color: #216869;
+  padding: 2.5%;
+  width: 50%;
+  text-align: center;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 1px 6px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+  color: white;
+}
+body{
     border: none;
 
 }
+.pizarron{
+    border: none;
+}
+.pizarron div {
+  margin-left: 12%;
+  border: none;
+}
+
+body .pizarron h2 {
+  text-align: left;
+  color: #ddd;
+  border: none;
+  text-shadow:
+    -1px -1px 0 rgba(207, 207, 207, 0.5),
+    1px -1px 1px rgba(255, 255, 255, 0.5);
+}
+section{
+    border: none;
+
+}
+body .pizarron h3 {
+  color: white;
+    text-shadow:
+    -1px -1px 0 rgba(207, 207, 207, 0.5),
+    1px -1px 1px rgba(255, 255, 255, 0.5);
+  border: none;
+
+}
+body div{  border: none;
+}
+body form {
+  border: none;
+}
 body form input[type="text"] {
+   margin-left: 15%;
   margin-bottom: 0.5%;
-width: 20%;
+  width: 20%;
   padding: 0.5%;
   border-radius: 5px;
 }
+
 body form input[type="submit"] {
-    margin-left: 2%;
-    width: 5%;
-    padding: 0.5%;
-    border-radius: 5px;
-  }
+  margin-left: 2%;
+  width: 5%;
+  padding: 0.5%;
+  border-radius: 5px;
+  color: white;
+    background-color: #216869;
+
+}
 
 body .pizarron {
   padding-top: 15%;
   padding-bottom: 15%;
   margin-left: 0%;
   background-position: 10%;
-  background-image: url("/img/fondo.jpg");
+  background-image: url("/img/fondo.png");
   background-repeat: no-repeat;
   background-size: contain;
 }
