Adicion del codigo de la foto del ahorcado

--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -22,6 +22,8 @@
       string letrasInc = string.Join(" - ", ViewBag.letrasFallidas);
     }
     <h3>@letrasInc</h3>
+
+    <img src="/img/@ViewBag.fotoAhorcado" alt="foto ahorcado">
     </div>
   </section>
   <div>
