--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -23,7 +23,7 @@
     }
     <h3>@letrasInc</h3>
 
-    <img src="/img/@ViewBag.fotoAhorcado" alt="foto ahorcado">
+    <img class="hangman" src="/img/@ViewBag.fotoAhorcado" alt="foto ahorcado">
     </div>
   </section>
   <div>
