--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -89,6 +89,8 @@ body .pizarron h3 {
 
 }
 body div{  border: none;
+    margin-bottom: 2%;
+
 }
 body form {
   border: none;
@@ -119,4 +121,12 @@ body .pizarron {
   background-image: url("/img/fondo.png");
   background-repeat: no-repeat;
   background-size: contain;
+}
+div .hangman{
+  border:none;
+  width:15%;
+  height: auto;
+  float: right;
+  margin-top: -15%;
+  margin-right:50%;
 }
