--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -28,12 +28,12 @@
   </section>
   <div>
     <form action='@Url.Action("arriesgarLetra")' method="get">
-      <input type="text" name="letraNueva" placeholder="Ingresa una letra" required maxlength="1">
+      <input type="text" name="letraNueva" placeholder="Ingresá una letra..." required maxlength="1">
       <input type="Submit" value="Enviar">
     </form>
 
     <form action='@Url.Action("arriesgarPalabra")' method="get">
-      <input type="Text" name="palabra" placeholder="Ingresa la palabra" required>
+      <input type="Text" name="palabra" placeholder="Escribí la palabra..." required>
       <input type="Submit" value="Enviar">
     </form>
   </div>
