--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1,10 +1,20 @@
 * {
   margin: 0%;
   padding: 0%;
+font-family: Georgia, 'Times New Roman', Times, serif;
   border: 1px solid gray;
 }
-
+header{
+  border: none;
+}
+header img{
+  border:none;
+}
+header a{
+  border: none;
+}
 body {
+  border: none;
   background-color: #DCE1DE;
 }
 
@@ -97,7 +107,7 @@ body form {
 }
 body form input[type="text"] {
    margin-left: 15%;
-  margin-bottom: 0.5%;
+  margin-bottom: 1%;
   width: 20%;
   padding: 0.5%;
   border-radius: 5px;
@@ -129,4 +139,31 @@ div .hangman{
   float: right;
   margin-top: -15%;
   margin-right:50%;
+}
+footer{
+    border:none;
+}
+h3{
+    border:none;
+}
+main{
+    border:none;
+
+}
+.resultado a{
+  margin-left: 45%;
+  background-color: #216869;
+  padding: 1%;
+  text-align: center;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 1px 6px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+  color: white;
+}
+h2{
+  margin: 2%;
+}
+div form input.entrada{
+  margin-left: 35%;
 }
