--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,16 +8,24 @@ html {
     font-size: 16px;
   }
 }
-
-body {
-  margin: 10px;
-  padding: 10px;
+header{
+padding: 0%;
+margin: 0%;
 }
-
-
+header img{
+  width: 10%;
+  height: auto;
+  padding: 0.5%;
+margin: 0%;
+margin-left: 1%;
+}
+footer h3{
+  color: rgb(43, 43, 43);
+  margin-left: 2%;
+  font-weight: normal;
+}
 footer {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #f8f9fa;
-  border-top: 1px solid #e9ecef;
+  padding: 1.5%;
+  padding-top: 3%;
+  background-color: #90a19a;
 }
