--- a/Views/Home/PartidaActual.cshtml
+++ b/Views/Home/PartidaActual.cshtml
@@ -14,9 +14,7 @@
 
     }
     <h3>@palabra</h3>
-
-
-    <h2>Intentos restantes: @ViewBag.intentosRestante </h2>
+    <h2>Vidas restantes: @ViewBag.intentosRestante </h2>
     <h2>Letras incorrectas: </h2>
     @{
       string letrasInc = string.Join(" - ", ViewBag.letrasFallidas);
