--- a/Views/Home/resultado.cshtml
+++ b/Views/Home/resultado.cshtml
@@ -7,6 +7,6 @@
 <div class="resultado">
     <h1>Juego finalizado: @ViewBag.resultadoPartida</h1>
     <h2>La palabra era: @ViewBag.palabra</h2>
-    <h2>Usaste @ViewBag.intentos</h2>
+    <h2>Usaste @ViewBag.intentos intentos</h2>
   <a href='@Url.Action("Index")'>Volver a jugar</a>
 </div>
